Worked on layout and sidebar toggle with overlay for small screens

--- a/src/assets/layout/layout.scss
+++ b/src/assets/layout/layout.scss
@@ -1,3 +1,9 @@
 @use '../layout/core';
 @use '../layout/common';
+@use '../layout/footer';
+@use '../layout/topbar';
+@use '../layout/layout-main';
+@use '../layout/sidebar';
+@use '../layout/responsive';
+
 
